# openapi-python-sdk

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python.yml  qa.yml
docs/: contributing.md  readme-pypi.md
examples/: api_calls.py  token_generation.py
openapi/: client.py
openapi_python_sdk/: __init__.py  async_client.py  async_oauth_client.py  client.py  oauth_client.py
tests/: test_async_client.py  test_client.py  test_thread_safety.py
