[tool.poetry]
name = "openapi-cli-python"
version = "0.1.0"
description = ""
authors = ["Michael Cuffaro <michael@cuffaro.com>"]
readme = "README.md"
packages = [{include = "openapi_cli_python"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
