[tool.poetry]
name = "openapi-python-sdk"
version = "0.2.0"
description = "A minimal Python SDK for the Openapi® API marketplace"
authors = ["Michael Cuffaro <michael@cuffaro.com>"]
readme = "docs/readme-pypi.md"
packages = [{include = "openapi_python_sdk"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
